# ETL-Olist-E-commerce

./: .gitignore  README.md  pyproject.toml
notebooks/: 01_eda.ipynb
src/olist_etl.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/olist_etl/extractors/: __init__.py  api_extractor.py  base.py  csv_extractor.py  extractor.py  factory.py  json_extractor.py  parquet_extractor.py
tests/: test_api_extractor.py  test_csv_extractor.py  test_extractor.py  test_factory.py  test_json_extractor.py  test_parquet_extractor.py
