[project]
name = "olist-etl"
version = "0.1.0"
description = "Pipeline ETL de estudo dos principios SOLID (SRP e OCP) usando o dataset Olist"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Regi Maria" }
]
license = { text = "MIT" }

dependencies = [
    "pandas>=2.2",
    "pyarrow>=15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "jupyter",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]